--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pug": "^2.0.0-beta.12",
     "pug-react-compiler": "^1.0.0",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-jade": "^2.5.0",
     "react-redux": "^5.0.4",
