--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-icons": "^2.2.3",
     "react-jade": "^2.5.0",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
