--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "jade": "^1.11.0",
+    "lodash": "^4.17.4",
     "prop-types": "^15.5.8",
     "pug": "^2.0.0-beta.12",
     "pug-react-compiler": "^1.0.0",
