--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^2.2.3",
     "react-jade": "^2.5.0",
     "react-redux": "^5.0.4",
+    "react-router": "^4.1.1",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-form": "^6.6.3",
