--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-jade": "^2.5.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-form": "^6.6.3",
